--- a/MMI.bib
+++ b/MMI.bib
@@ -106,3 +106,11 @@ year = {2001}
   howpublished = {http://tools.ietf.org/html/draft-jones-appsawg- webfinger-04},
   
 }
+@article{Syta,
+abstract = {—The secret keys of critical network authorities – such as time, name, certificate, and software update services – represent high-value targets for hackers, criminals, and spy agencies wishing to use these keys secretly to compromise other hosts. To protect authorities and their clients proactively from undetected exploits and misuse, we introduce CoSi, a scalable witness cosigning protocol ensuring that every authoritative statement is validated and publicly logged by a diverse group of witnesses before any client will accept it. A statement S collectively signed by W witnesses assures clients that S has been seen, and not immediately found erroneous, by those W observers. Even if S is compromised in a fashion not readily detectable by the witnesses, CoSi still guarantees S's exposure to public scrutiny, forcing secrecy-minded attackers to risk that the compromise will soon be detected by one of the W witnesses. Because clients can verify collective signatures efficiently without communication, CoSi protects clients' privacy, and offers the first transparency mechanism effective against persistent man-in-the-middle attackers who control a victim's Internet access, the authority's secret key, and several witnesses' secret keys. CoSi builds on existing cryptographic multisignature methods, scaling them to support thousands of witnesses via signature aggrega-tion over efficient communication trees. A working prototype demonstrates CoSi in the context of timestamping and logging authorities, enabling groups of over 8,000 distributed witnesses to cosign authoritative statements in under two seconds.},
+author = {Syta, Ewa and Tamas, Iulia and Visher, Dylan and Wolinsky, David Isaac and Jovanovic, Philipp and Gasser, Linus and Gailly, Nicolas and Khoffi, Ismail and Ford, Bryan},
+file = {:Users/mark/Library/Application Support/Mendeley Desktop/Downloaded/Syta et al. - Unknown - Keeping Authorities {\&}quot Honest or Bust {\&}quot with Decentralized Witness Cosigning.pdf:pdf},
+mendeley-groups = {MMI References},
+title = {{Keeping Authorities " Honest or Bust " with Decentralized Witness Cosigning}},
+url = {http://dedis.cs.yale.edu/dissent/papers/witness.pdf}
+}
